# portscope

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
examples/: adaptive_demo.rs
src/: adaptive.rs  cli.rs  lib.rs  main.rs  network.rs  output.rs  utils.rs
src/scanner/: adaptive_service_detector.rs  aggressive_probing.rs  discovery.rs  evasion.rs  intelligent_classifier.rs  ml_classifier.rs  mod.rs  os_fingerprint.rs  parallel_detector.rs  response_analyzer.rs  results.rs  scan_cache.rs  service_detection.rs  tcp.rs  udp.rs
src/scanner/protocol_detectors/: database_detectors.rs  development_detectors.rs  messaging_detectors.rs  mod.rs  system_detectors.rs  web_detectors.rs
tests/: integration_tests.rs
